--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,52 @@ h1 {
 }
 
 body {
-  background-color: #9ab8ba;
   color: #0b1516;
+}
+
+p {
+  text-align: center;
+  font-size: 18px;
+}
+
+#pages {
+  list-style: none;
+  font-size: 15px;
+}
+
+#motivation {
+  text-align: center;
+}
+
+.row {
+  padding-top: 2%;
+  display: flex;
+  width: 100%;
+  column-gap: 15px;
+}
+
+.column {
+  width: 100%;
+  text-align: center;
+  border: black 1px solid;
+  padding: 2%;
+}
+
+#pages li {
+  font-size: 18px;
+}
+
+.works {
+  padding: 2%;
+  border: black 1px solid;
+}
+
+.container {
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.back-button {
+  text-align: center;
+  font-size: 18px;
 }
